Feb 09 2003  2.9.1  Added timer scheduler for (future) plugins and WSP100
                     wakeup packets.
Feb 07 2003  2.9.1  Added handling of filter_export
                    Fixed multi-server connecting, grouping bug still present
Feb 06 2003  2.9.1  Added masking capability to MAC addresses and filters, 
                     reduced memory usage slightly.
Feb 05 2003  2.9.1  Fixed minor gpsmap netxml-search-path bug that didn't 
                     handle netxml in the current directory.
                    Revamped filtering mechanism to be far more flexable and
                     useful.  See the config file and man page.
Feb 03 2003  2.9.1  Fixed some alerts being reported as notifications
Feb 01 2003  2.9.1  Merged patch from Pedro to fix memory faults on some BSDs.
                    Added ability to include subconfig files (containing, for
                     example, WEP keys)
Jan 31 2003  2.9.1  Merged new patch from Anton for power-level scatter plots.
Jan 27 2003  2.9.1  Merged patch for gpsmap power-level scatter plots
Jan 26 2003  2.9.1  Started 2.9.1 devel cycle

Jan 26 2003  2.8.1  Released 2.8.1 with bugfixes and updates, including:
                     802.11a support
                     XML Updates
                     GPSMap updates
                     Speech/Sound updates
                     Speech shellcode security updates

Jan 26 2003  2.9.0  Updated manufacturer files with latest unbolted.net info
Jan 22 2003  2.9.0  Hopefully nipped speech/sound doubling bug.
                    Happy linux world!
                    Added ability to show string dumps from tagged networks
                     only
                    Fixed packet type to work with multiple clients
                    Added ability to show packet types from tagged networks
                     only
Jan 19 2003  2.9.0  Added support for 802.11a (152-bit) WEP
Jan 16 2003  2.9.0  Updated expat.cc to handle the 'carrier' attribute