@@ -1,5 +1,6 @@
 Feb 09 2003  2.9.1  Added timer scheduler for (future) plugins and WSP100
                      wakeup packets.
+                    Merged modified patch from gherlein to issue WSP100 wakeups
 Feb 07 2003  2.9.1  Added handling of filter_export
                     Fixed multi-server connecting, grouping bug still present
 Feb 06 2003  2.9.1  Added masking capability to MAC addresses and filters, 
